Generate table comments that include the foreign key relationships