@@ -1,5 +1,6 @@
 package me.bechberger.jfr.duckdb;
 
+import jdk.jfr.consumer.RecordedObject;
 import me.bechberger.jfr.duckdb.commands.*;
 import picocli.CommandLine;
 
@@ -61,7 +62,48 @@ public class Main implements Runnable{
         spec.commandLine().usage(System.out);
     }
     public static void main(String[] args) {
-        int exitCode = new CommandLine(new Main()).execute(args);
-        System.exit(exitCode);
+        if (!new Main().checkIfReflectiveAccessOnRecordedObjectIsAvailable()) {
+            restartWithAddOpenModules(args);
+        } else {
+            int exitCode = new CommandLine(new Main()).execute(args);
+            System.exit(exitCode);
+        }
+    }
+
+    private static void restartWithAddOpenModules(String[] args) {
+        try {
+            String javaHome = System.getProperty("java.home");
+            String javaBin = javaHome + "/bin/java";
+            String classPath = System.getProperty("java.class.path");
+            String className = Main.class.getCanonicalName();
+
+            ProcessBuilder builder = new ProcessBuilder(
+                    javaBin,
+                    "--add-opens", "jdk.jfr/jdk.jfr.consumer=ALL-UNNAMED",
+                    "-cp", classPath,
+                    className
+            );
+            System.out.println("Restarting with --add-opens jdk.jfr/jdk.jfr.consumer=ALL-UNNAMED ");
+            for (String arg : args) {
+                builder.command().add(arg);
+            }
+            builder.inheritIO();
+            Process process = builder.start();
+            int exitCode = process.waitFor();
+            System.exit(exitCode);
+        } catch (Exception e) {
+            e.printStackTrace();
+            System.exit(1);
+        }
+    }
+
+    private boolean checkIfReflectiveAccessOnRecordedObjectIsAvailable() {
+        try {
+            var objectContextField = RecordedObject.class.getDeclaredField("objectContext");
+            objectContextField.setAccessible(true);
+            return true;
+        } catch (Exception e) {
+            return false;
+        }
     }
 }
